# conceptual_dictionary

./: LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
conceptual_dictionary/: __init__.py  conceptualdict.py  templates.py
knowledge_dictionary/: __init__.py  knowledgedict.py  templates.py
