[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-dictionary"
version = "0.1.0"
description = "A Python dictionary template for storing serializable metadata"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "pyscal"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["dictionary", "metadata", "serialization", "knowledge"]

[project.urls]
"Homepage" = "https://github.com/pyscal/knowledge_dictionary"
"Bug Tracker" = "https://github.com/pyscal/knowledge_dictionary/issues"

[tool.setuptools]
packages = ["knowledge_dictionary"]
