[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conceptual-dictionary"
version = "0.1.2"
description = "A Python dictionary template for storing serializable metadata"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Sarath Menon"},
    {name = "Abril Azocar Guzman"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["dictionary", "metadata", "serialization", "conceptual"]

dependencies = [
    "numpy",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/pyscal/conceptual_dictionary"
"Bug Tracker" = "https://github.com/pyscal/conceptual_dictionary/issues"

[tool.setuptools]
packages = ["conceptual_dictionary"]